OPS-1133 Adds psql client to base image and a few python libs

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install -y \
         python-dev \
         libssl-dev \
         awscli \
+        postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 COPY sss_client.pam /etc/pam.d/sss_client
 
