Fix for installation of some DV packages

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -24,8 +24,8 @@ RUN BUILDDEPS="libpq-dev libssl-dev libpcre3-dev libbz2-dev liblzma-dev zlib1g-d
     && cat /tmp/Install_versions.R /tmp/Packages_*.R > /tmp/install.R && \
     Rscript /tmp/install.R \
     # Install python deps
-    && ls /tmp/Packages_*.py2 && (apt-get install --no-install-recommends  -y python-pip && ls /tmp/Packages_*.py2 | xargs -l pip install -r) || /bin/true \
-    && ls /tmp/Packages_*.py3 && (apt install --no-install-recommends  -y python3-pip && ls /tmp/Packages_*.py3 | xargs -l pip3 install -r) || /bin/true \
+    && ls /tmp/Packages_*.py2 && (apt-get install --no-install-recommends -y python-pip python-setuptools python-wheel && cat /tmp/Packages_*.py2 > /tmp/py2 | pip install -r /tmp/py2) || /bin/true \
+    && ls /tmp/Packages_*.py3 && (apt install --no-install-recommends -y python3-pip python3-setuptools python3-wheel && cat /tmp/Packages_*.py3 > /tmp/py3 | pip3 install -r /tmp/py3) || /bin/true \
     # Final permissions and folders
     && mkdir -p /home/ta_analytics \
     && chown 10000:10000 /home/ta_analytics \
