--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -18,6 +18,7 @@ RUN BUILDDEPS="libpq-dev libssl-dev libpcre3-dev libbz2-dev liblzma-dev zlib1g-d
         openjdk-11-jdk \
         wget \
         libcurl4-openssl-dev \
+        netcat \
         ${BUILDDEPS} \
     # Install R packages
     && R CMD javareconf \
