Hazelcast R-Cpp bridge

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -39,3 +39,36 @@ RUN BUILDDEPS="libpq-dev libssl-dev libpcre3-dev libbz2-dev liblzma-dev zlib1g-d
     # Test all R packages are installed \
     && cat /tmp/Test_packages.R /tmp/Packages_*.R | sed 's/install.versions(/testpackage(df, /g' | R \
     && cat /tmp/Test_packages.R /tmp/Packages_*.R | sed 's/install.versions(/testpackageExit(df, /g' | R 
+
+
+### Hazelcast layer
+RUN echo deb http://deb.debian.org/debian buster-backports main >> /etc/apt/sources.list \
+    && apt update \
+    && apt install zlib1g-dev bzip2 cmake/buster-backports g++ wget -y
+
+# Boost
+RUN wget https://boostorg.jfrog.io/artifactory/main/release/1.75.0/source/boost_1_75_0.tar.bz2 -q\
+    && tar xvf /boost_1_75_0.tar.bz2\
+    && cd boost_1_75_0 \
+    && ./bootstrap.sh \
+    && ./b2 cxxflags=-fPIC -a --with-thread --with-chrono install \
+    && cd .. && rm -rf boost_1_75_0 boost_1_75_0.tar.bz2
+
+# HZ Cpp client
+RUN wget https://github.com/hazelcast/hazelcast-cpp-client/archive/v4.0.1.tar.gz -q
+RUN tar xvf /v4.0.1.tar.gz\
+    && cd hazelcast-cpp-client-4.0.1\
+    && mkdir build\
+    && cd build\
+    && cmake .. -DBUILD_SHARED_LIBS=OFF -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_INSTALL_PREFIX=/home/hz\
+    && cmake --build . --config Release\
+    && cmake --build . --target install --config Release
+
+# R-Cpp bridge  
+RUN wget https://github.com/znevrly/R-Hazelcast-c-package/archive/refs/heads/master.zip 
+RUN unzip master.zip\
+    && cd  R-Hazelcast-c-package-master/\
+    && cp /usr/local/lib/libboost_thread.a hz-libs/lib/\
+    && cp /usr/local/lib/libboost_chrono.a hz-libs/lib/\
+    && cp /home/hz/lib/libhazelcast-cpp-client.a hz-libs/lib/\
+    && R CMD INSTALL .
