--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,6 +1,5 @@
 FROM rocker/r-ver:3.6.2 AS builder
-ARG git_username
-ARG git_password
+ARG git_creds
 RUN echo deb http://deb.debian.org/debian buster-backports main >> /etc/apt/sources.list \
         && apt update \
         && apt install zlib1g-dev bzip2 cmake/buster-backports g++ wget git -y \
@@ -19,7 +18,7 @@ RUN echo deb http://deb.debian.org/debian buster-backports main >> /etc/apt/sour
         && cmake --build . --config Release\
         && cmake --build . --target install --config Release \
         && cd /root \
-        && git clone https://${git_username}:${git_password}@github.com/finmason2108/hazelcast-client-c.git \
+        && git clone https://${git_creds}@github.com/finmason2108/hazelcast-client-c.git \
         && cd /root/hazelcast-client-c \
         && cp /usr/local/lib/libboost_thread.a hz-libs/lib/\
         && cp /usr/local/lib/libboost_chrono.a hz-libs/lib/\
