--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -72,7 +72,7 @@ RUN BUILDDEPS="libpq-dev libssl-dev libpcre3-dev libbz2-dev liblzma-dev zlib1g-d
     && R CMD INSTALL HazelcastClient_0.0.1.tar.gz \
     # Clean caches
     && apt-get purge -y $BUILDDEPS \
-    && apt-get install -y libpq5 libxml2\
+    && apt-get install -y libpq5 libxml2 libpng-tools\
     && apt-get autoremove -y \
     && apt-get autoclean -y \
     && rm -rf /var/lib/apt/lists/* \
