--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,9 +2,8 @@
 
 FROM rocker/r-ver:4.1.0 AS builder
 ARG git_creds
-RUN echo deb http://deb.debian.org/debian buster-backports main >> /etc/apt/sources.list \
-        && apt update \
-        && apt install zlib1g-dev bzip2 cmake/buster-backports g++ wget git -y \
+RUN apt update \
+        && apt install zlib1g-dev bzip2 cmake g++ wget git -y \
         && wget https://boostorg.jfrog.io/artifactory/main/release/1.75.0/source/boost_1_75_0.tar.bz2 -q\
         && tar xf /boost_1_75_0.tar.bz2\
         && cd boost_1_75_0 \
